--- a/multiapp/app-of-apps.yaml
+++ b/multiapp/app-of-apps.yaml
@@ -11,7 +11,7 @@ spec:
     path: ./declarative/app-of-apps
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: cloudchamp
   syncPolicy:
     automated:
        prune: true  
