--- a/appsets/votingapp-qa-appset.yaml
+++ b/appsets/votingapp-qa-appset.yaml
@@ -11,7 +11,7 @@ spec:
       repoURL: https://github.com/Sreeju1992/Voting-app.git
       revision: HEAD
       directories:
-      - path: apps/*/overlay/Dev
+      - path: apps/*/overlay/dev
   template:
     metadata:
       name: '{{index .path.segments 1}}-{{index .path.segments 3}}'
