Added plugin for secret management

--- a/apps/mongo/overlay/dev/kustomization.yaml
+++ b/apps/mongo/overlay/dev/kustomization.yaml
@@ -7,3 +7,13 @@ labels:
     env: dev
 resources:
 - ../../base
+
+secretGenerator:
+- literals:
+  - username=<username>
+  - password=<password>
+  name: mongodb-secret
+  type: Opaque
+  options:
+    annotations:
+      avp.kubernetes.io/path: /credentials/app
