--- a/appsets/votingapp-qa-appset.yaml
+++ b/appsets/votingapp-qa-appset.yaml
@@ -24,6 +24,8 @@ spec:
         repoURL: https://github.com/Sreeju1992/Voting-app.git
         targetRevision: HEAD
         path: '{{.path.path}}'
+        plugin:
+          name: argocd-vault-plugin
 
       # Destination cluster and namespace to deploy the application
       destination:
