--- a/apps/mongo/base/kustomization.yaml
+++ b/apps/mongo/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
 - mongo-statefulset.yaml
 - mongo-service.yaml
+- mongo-secret.yaml
 labels:
 - includeSelectors: false
   pairs:
